# Matching-Engine-Threadweaver

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  shell.nix
data/: analyze.txt  output2.csv
results/: .~lock.output_buff_size_comp.csv#
results/raw/: output_buff_size_comp.csv  output_buff_size_comp_from_64.csv
scripts/: group_tests.sh  output_plotter_b.py
src/: dynamic_lockless_ring_buffer.hpp  lockless_ring_buffer.hpp  main.cpp  ring_buffer_tp.hpp  static_lockless_ring_buffer.hpp  static_lowcas_lockless_ring_buffer.hpp  static_memctrl_lockless_ring_buffer.hpp  tp_provider.cpp
src/allocators/: distributed_dynamic_allocator.hpp  one_time_static_allocator.hpp
src/buffer/: buffer.hpp  generics.hpp  scmp.hpp  scsp.hpp
src/buffer/layouts/: lockless_ring_buffer_layout.hpp
src/buffer/ring/: cell_lockable_approach.hpp  cell_lockable_approach_opt_1.hpp  simple_approach.hpp  three_pointer_approach.hpp
src/common/: class_extensions.hpp  generic.hpp
src/common/concepts/: generic.hpp
src/common/memory/: cache_line.hpp  guards.hpp
tests/: buffer_general_test.cpp  buffer_simple_test.cpp  ring_buffer_low_cas_test.cpp  ring_buffer_test.cpp  shared_memory_test.cpp
